<resources>
    <string name="app_name">迎天下</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="bottombar_content1">购物车</string>
    <string name="bottombar_content2">购物车</string>
    <string name="bottombar_content3">购物车</string>
    <string name="bottombar_content4">购物车</string>
    <string name="bottombar_content5">购物车</string>
</resources>
