<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottombar_group"
    android:layout_width="match_parent"
    android:layout_height="@dimen/bottombar_height"
    android:layout_alignParentBottom="true"
    android:layout_gravity="bottom"
    android:orientation="horizontal" >

    <RadioButton
        android:id="@+id/bottombar_content1"
        style="@style/bottombar"
        android:layout_weight="1"
        android:button="@null"
        android:checked="true"
        android:text="@string/bottombar_content1" />

    <RadioButton
        android:id="@+id/bottombar_content2"
        style="@style/bottombar"
        android:layout_weight="1"
        android:button="@null"
        android:text="@string/bottombar_content2" />

    <RadioButton
        android:id="@+id/bottombar_content3"
        style="@style/bottombar"
        android:layout_weight="1"
        android:button="@null"
        android:text="@string/bottombar_content3" />

    <RadioButton
        android:id="@+id/bottombar_content4"
        style="@style/bottombar"
        android:layout_weight="1"
        android:button="@null"
        android:text="@string/bottombar_content4" />

    <RadioButton
        android:id="@+id/bottombar_content5"
        style="@style/bottombar"
        android:layout_weight="1"
        android:button="@null"
        android:text="@string/bottombar_content5" />

</RadioGroup>